# vulkan-physics-sim

./: CMakeLists.txt  README.md
include/: planet.hpp  sphere_model.hpp  vulkan_app.hpp
shaders/: shader.frag  shader.vert  vert.spv
src/: main.cpp  sphere_model.cpp  vulkan_app.cpp
